# code_cli

./: .gitignore  AGENTS.md  Makefile  aicoder.spec  pyproject.toml  session-ses_107a.md
docs/superpowers/specs/: 2026-06-24-deepagent-claude-code-clone-design.md  2026-06-24-multimodal-design.md  2026-06-24-skills-system-design.md
src/aicoder/: main.py  util.py
src/aicoder/agent/: bash_tool.py  compaction.py  diff.py  factory.py  images.py  init_project.py  mcp_client.py  models.py  prompt.py  snapshot.py  stats.py  subagents.py  vision.py  web.py
src/aicoder/cli/: commands.py  interrupts.py  permission_gate.py  renderer.py  repl.py  runtime.py  session.py
src/aicoder/config/: loader.py  permissions.py  skills.py
src/aicoder/skills/builtin/code-review/: SKILL.md
src/aicoder/skills/builtin/git-workflow/: SKILL.md
src/aicoder/skills/builtin/python-testing/: SKILL.md
tests/: conftest.py  test_bash_tool.py  test_commands.py  test_config.py  test_integration.py  test_model_commands.py  test_models.py  test_permission_gate.py  test_permissions.py  test_prompt.py  test_session.py  test_skills.py  test_vision.py
vscode/: extension.js  package.json
work/e/: snake.py
work/r/: snake.py
work/snake-game/: index.html
