[project]
name = "aicoder"
version = "0.1.0"
description = "A terminal AI coding assistant powered by Deep Agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zuiyue" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Artificial Intelligence",
]
dependencies = [
    "deepagents",
    "langgraph-checkpoint-sqlite",
    "langchain-openai",
    "langchain-core",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
aicoder = "aicoder.main:main"

[project.optional-dependencies]
test = ["pytest", "pexpect"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/aicoder"]

[tool.hatch.build]
include = ["src/aicoder/skills/**"]
